--- a/plugin.xml
+++ b/plugin.xml
@@ -61,7 +61,8 @@
 
 		<!-- <source-file src="src/ios/xxx.a" framework="true" /> -->
 
-
+        <header-file src="src/ios/MfiBtPrinterConnection.h"/>
+        <header-file src="src/ios/ZebraPrinterConnection.h"/>
 		<header-file src="src/ios/ZebraPrinter.h" />
 		<source-file src="src/ios/ZebraPrinter.m" />
 
